fix: Баг найден, это рабочая версия, но ???нужно??? сделать красивей