@@ -85,10 +85,12 @@ public class FilmDbStorage implements FilmStorage {
         String sql =
                 "UPDATE films SET name = ?, description = ?, release_date = ?, " +
                 "duration = ?, rating_id = ? WHERE id = ?";
+
         jdbcTemplate.update(sql, film.getName(), film.getDescription(),
                             Date.valueOf(film.getReleaseDate()),
-                            film.getDuration(), film.getRating()
-                                                    .getId(), film.getId());
+                            film.getDuration()
+                                .toMinutes(), film.getRating()
+                                                  .getId(), film.getId());
 
         deleteLinkedFilmData(film);
         saveLinkedFilmData(film);
@@ -112,20 +114,20 @@ public class FilmDbStorage implements FilmStorage {
     @Override
     public Collection<Film> getDirectorFilms(Long directorId, String sortBy) {
         String sql = "SELECT f.* " +
-                "FROM films f " +
-                "JOIN film_directors fd ON f.id = fd.film_id " +
-                "JOIN ref_director d ON fd.director_id = d.id " +
-                "WHERE d.id = ? " +
-                "ORDER BY EXTRACT(YEAR FROM f.release_date);";
+                     "FROM films f " +
+                     "JOIN film_directors fd ON f.id = fd.film_id " +
+                     "JOIN ref_director d ON fd.director_id = d.id " +
+                     "WHERE d.id = ? " +
+                     "ORDER BY EXTRACT(YEAR FROM f.release_date);";
         if (sortBy.equals("likes")) {
             sql = "SELECT f.* " +
-                    "FROM films f " +
-                    "JOIN film_directors fd ON f.id = fd.film_id " +
-                    "JOIN ref_director d ON fd.director_id = d.id " +
-                    "LEFT JOIN film_likes fl ON f.id = fl.film_id " +
-                    "WHERE d.id = ? " +
-                    "GROUP BY f.id " +
-                    "ORDER BY COUNT(fl.film_id) DESC;";
+                  "FROM films f " +
+                  "JOIN film_directors fd ON f.id = fd.film_id " +
+                  "JOIN ref_director d ON fd.director_id = d.id " +
+                  "LEFT JOIN film_likes fl ON f.id = fl.film_id " +
+                  "WHERE d.id = ? " +
+                  "GROUP BY f.id " +
+                  "ORDER BY COUNT(fl.film_id) DESC;";
         }
 
         List<Film> films = jdbcTemplate.query(sql, filmRowMapper, directorId);
@@ -148,7 +150,8 @@ public class FilmDbStorage implements FilmStorage {
 
         Map<Long, List<Genre>> genresMap = loadGenresForFilms(filmIds);
 
-        Map<Long, List<Director>> directorsMap = loadDirectorsForFilms(filmIds);
+        Map<Long, List<Director>> directorsMap = loadDirectorsForFilms(
+                filmIds);
 
         Map<Long, Rating> ratingsMap = loadRatingsByIds(ratingIds);
 
@@ -157,8 +160,8 @@ public class FilmDbStorage implements FilmStorage {
                     likesMap.getOrDefault(film.getId(), new HashSet<>()));
             film.setGenres(
                     genresMap.getOrDefault(film.getId(), new ArrayList<>()));
-            film.setDirectors(
-                    directorsMap.getOrDefault(film.getId(), new ArrayList<>()));
+            film.setDirectors(directorsMap.getOrDefault(film.getId(),
+                                                        new ArrayList<>()));
 
             Rating fullRating = ratingsMap.get(film.getRating()
                                                    .getId());
@@ -207,12 +210,12 @@ public class FilmDbStorage implements FilmStorage {
 
     private Map<Long, List<Director>> loadDirectorsForFilms(Set<Long> filmIds) {
         String sql = "SELECT fd.film_id, d.id, d.name " +
-                "FROM film_directors fd " +
-                "JOIN ref_director d ON fd.director_id = d.id " +
-                "WHERE fd.film_id IN (:filmIds)";
+                     "FROM film_directors fd " +
+                     "JOIN ref_director d ON fd.director_id = d.id " +
+                     "WHERE fd.film_id IN (:filmIds)";
 
         Map<String, Object> params = Collections.singletonMap("filmIds",
-                filmIds);
+                                                              filmIds);
 
         return namedParameterJdbcTemplate.query(sql, params, rs -> {
             Map<Long, List<Director>> result = new HashMap<>();
@@ -222,8 +225,10 @@ public class FilmDbStorage implements FilmStorage {
                 String directorName = rs.getString("name");
                 result.computeIfAbsent(filmId, k -> new ArrayList<>());
                 Director director = new Director(directorId, directorName);
-                if (!result.get(filmId).contains(director)) {
-                    result.get(filmId).add(director);
+                if (!result.get(filmId)
+                           .contains(director)) {
+                    result.get(filmId)
+                          .add(director);
                 }
             }
             return result;
@@ -243,7 +248,7 @@ public class FilmDbStorage implements FilmStorage {
                                                 Function.identity()));
     }
 
-    private void saveLinkedFilmData(Film film) {
+    public void saveLinkedFilmData(Film film) {
         saveLikes(film);
         saveFilmGenres(film);
         saveFilmDirectors(film);
@@ -263,8 +268,7 @@ public class FilmDbStorage implements FilmStorage {
 
         List<Object[]> batchArgs = likes.stream()
                                         .map(userId -> new Object[]{
-                                                film.getId(),
-                                                userId
+                                                film.getId(), userId
                                         })
                                         .collect(Collectors.toList());
 
@@ -277,22 +281,23 @@ public class FilmDbStorage implements FilmStorage {
     }
 
     private void saveFilmGenres(Film film) {
-        String sql = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
-        List<Genre> genres = film.getGenres();
-        if (genres == null || genres.isEmpty())
-            return;
+        String sql = "MERGE INTO film_genres (film_id, genre_id) KEY (film_id, genre_id) VALUES (?, ?)";
 
-        Set<Long> uniqueGenreIds = film.getGenres()
-                                       .stream()
-                                       .map(Genre::getId)
-                                       .collect(Collectors.toSet());
+        List<Genre> genres = film.getGenres();
+        if (genres == null || genres.isEmpty()) {
+            return;
+        }
+
+        Set<Long> uniqueGenreIds = genres.stream()
+                                         .map(Genre::getId)
+                                         .collect(Collectors.toSet());
 
         List<Object[]> batchArgs = uniqueGenreIds.stream()
                                                  .map(genreId -> new Object[]{
                                                          film.getId(),
                                                          genreId
                                                  })
-                                                 .toList();
+                                                 .collect(Collectors.toList());
 
         jdbcTemplate.batchUpdate(sql, batchArgs);
     }
@@ -314,16 +319,16 @@ public class FilmDbStorage implements FilmStorage {
             return;
 
         Set<Long> uniqueDirectorIds = film.getDirectors()
-                .stream()
-                .map(Director::getId)
-                .collect(Collectors.toSet());
+                                          .stream()
+                                          .map(Director::getId)
+                                          .collect(Collectors.toSet());
 
         List<Object[]> batchArgs = uniqueDirectorIds.stream()
-                .map(directorId -> new Object[]{
-                        film.getId(),
-                        directorId
-                })
-                .toList();
+                                                    .map(directorId -> new Object[]{
+                                                            film.getId(),
+                                                            directorId
+                                                    })
+                                                    .toList();
 
         jdbcTemplate.batchUpdate(sql, batchArgs);
     }
